[gd_scene load_steps=22 format=2]

[ext_resource path="res://font/Comfortaa/Comfortaa-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/useing_device.gd" type="Script" id=2]
[ext_resource path="res://audio/normal_sound.mp3" type="AudioStream" id=3]
[ext_resource path="res://audio/pressed.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0117647, 0.482353, 0.156863, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.227451, 0.156863, 0.156863, 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.0117647, 0.0745098, 0.321569, 1 )

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.0509804, 0.392157, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.396078, 0.0196078, 1 )

[sub_resource type="StreamTexture" id=16]
flags = 4
load_path = "res://.import/on_icon.png-9fdb0ae806548ebd5fb4aba3ae194584.stex"

[sub_resource type="DynamicFont" id=13]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.0509804, 0.392157, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.823529, 0.00392157, 0.00392157, 1 )

[sub_resource type="StreamTexture" id=17]
flags = 4
load_path = "res://.import/on_icon.png-9fdb0ae806548ebd5fb4aba3ae194584.stex"

[sub_resource type="StreamTexture" id=12]
flags = 4
load_path = "res://.import/back_button.png-fc667308579cc9d3a1d4b66657bae9bd.stex"

[node name="settings" type="Node2D"]
script = ExtResource( 2 )

[node name="color_rect" type="ColorRect" parent="."]
margin_right = 408.0
margin_bottom = 704.0
color = Color( 0.14902, 0.145098, 0.168627, 1 )

[node name="question" type="Label" parent="."]
margin_left = -35.0
margin_top = 75.0
margin_right = 445.0
margin_bottom = 122.0
custom_fonts/font = SubResource( 1 )
text = "Game Controls...."
align = 1
valign = 1

[node name="sound_on_off" type="Label" parent="."]
margin_left = -35.0
margin_top = 291.0
margin_right = 445.0
margin_bottom = 338.0
custom_fonts/font = SubResource( 8 )
text = "Sound"
align = 1
valign = 1

[node name="computer_button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 188.0
margin_right = 216.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 5 )
text = "keyboard"

[node name="mobile_button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 233.0
margin_top = 188.0
margin_right = 400.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 3 )
custom_styles/hover = SubResource( 7 )
custom_styles/normal = SubResource( 4 )
text = "touch"
icon_align = 1

[node name="on" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 384.0
margin_right = 173.0
margin_bottom = 432.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/hover = SubResource( 11 )
custom_styles/normal = SubResource( 10 )
text = "On"
icon_align = 1

[node name="on_icon" type="Sprite" parent="on"]
unique_name_in_owner = true
position = Vector2( 80.0001, 24 )
scale = Vector2( 1.6, 0.533333 )
texture = SubResource( 16 )

[node name="off" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 223.0
margin_top = 384.0
margin_right = 384.0
margin_bottom = 432.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "Off"
icon_align = 1

[node name="on_icon2" type="Sprite" parent="off"]
unique_name_in_owner = true
visible = false
position = Vector2( 81.0001, 24 )
scale = Vector2( 1.61666, 0.533333 )
texture = SubResource( 17 )

[node name="back_button" type="TextureButton" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 66.0
margin_bottom = 66.0
texture_normal = SubResource( 12 )

[node name="normal_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 10.0
autoplay = true

[node name="pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="computer_button" to="." method="_on_computer_button_pressed"]
[connection signal="pressed" from="mobile_button" to="." method="_on_mobile_button_pressed"]
[connection signal="pressed" from="on" to="." method="_on_on_pressed"]
[connection signal="pressed" from="off" to="." method="_on_off_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
